--- a/source/app.css
+++ b/source/app.css
@@ -51,6 +51,12 @@ a, a:visited {
   margin-bottom: 16px;
 }
 
+.early-voting {
+  white-space: pre-wrap;
+  padding: 16px 0;
+  font-style: italic;
+}
+
 .hidden {
   display: none;
 }
